# projeto_flask

./: pyproject.toml
meu_projeto_flask/: app.py  app2.py
meu_projeto_flask/estudo-arquivo/: arquivos.py  dados.txt  produtos.csv
meu_projeto_flask/templates/: cadastro_produto.html  gerador_cpf.html  home.html  produtos.html  validar_cpf.html
