[tool.poetry]
name = "meu-projeto-flask"
version = "0.1.0"
description = ""
authors = ["Rodrigo Mariano <rodrigo.mariano@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
